# CmakeDemo

./: CMakeLists.txt  README.md  main.cpp
include/: solution.h
src/: solution.cpp
